--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link href="styles.css" rel="stylesheet" />
+</head>
+    
+<head>
     <title>Portfolio Website - Molly Flinn</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,8 +22,11 @@
 <p>Welcome to my page! My name is Molly Flinn and I am 20 years old. I am originally from Newcastle, UK but live in Calgary now, and I am a <a href="https://www.sait.ca/programs-and-courses/diplomas/interactive-design-graphic-design">Graphic Design student</a> at SAIT.
 
 </body>
-<p>Some of my hobbies include: watching movies, listening to music, drawing, cooking, and sleeping lol. 
-<img src="https://images.askmen.com/sports/health/_1498481623.jpg" alt="Austin Powers Fat Bastard character" <break><figcaption>Image Credit: askmen</figcaption>
+<p>Some of my hobbies include: watching movies, listening to music, drawing, cooking, and sleeping lol.</p>
+<img src="https://images.askmen.com/sports/health/_1498481623.jpg" alt="Austin Powers Fat Bastard character" 
+
+
+</body>
 <h2 id="My-Top-5-Songs">My Top 5 Songs</h2>
 <table style="width:100%">
   </tr> 
@@ -55,5 +62,12 @@ Phone: (123) 456-7890 // Email: whodis@gmail.com // Address: <a href="https://ww
 <h2 id="Images">Images</h2>
 <img
 src="https://i.imgur.com/h7fBMkF.png" alt="Ozzy Osbourne Meme" width="500" height="350"
-<break><figcaption>Image Credit: Imgur
 </html>
+
+<h2>Thanks for stopping by!</h2>
+
+<footer>
+  <p>Find me on Instagram @whodis, Twitter @whodis, LinkedIn @molflinn
+  </p>
+  <p>Image 1 sourced from "askmen", Image 2 sourced from "Imgur"</p>
+</footer>
